// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb.Item /> renders correctly when an href prop is passed 1`] = `
<li
  className="hLIAGC"
>
  <a
    className="dwQrcO fjkGjq"
    href="/"
    onClick={null}
    rel="_self"
    size="uno"
    target=""
  >
    Home
  </a>
</li>
`;

exports[`<Breadcrumb.Item /> renders correctly when no href prop is passed 1`] = `
<li
  className="hLIAGC"
>
  <span
    className="ibDjor dFlOxs"
    href={null}
    onClick={null}
    rel="_self"
    size="uno"
    target=""
  >
    Home
  </span>
</li>
`;
